Deployment workflow testing

--- a/.github/workflows/deploy-to-beta.yml
+++ b/.github/workflows/deploy-to-beta.yml
@@ -1,16 +1,16 @@
 name: Deploy to beta
 
 on:
-    push:
-        branches:
-            - devel
+    #push:
+    #    branches:
+    #        - devel
     workflow_dispatch:
         inputs:
             pull_request:
                 type: string
-                description: "Pull request number or branch name to deploy (optional - leave empty for devel)"
-                required: true
-                default: "devel"
+                description: "Pull request number (e.g., '123') or branch name to deploy. Leave empty to deploy 'devel' branch."
+                required: false
+                default: ""
 
 jobs:
     deployment:
@@ -18,10 +18,25 @@ jobs:
         timeout-minutes: 10
 
         steps:
+            # Determine the ref to checkout
+            - name: Determine checkout ref
+              id: checkout-ref
+              run: |
+                  if [[ -z "${{ inputs.pull_request }}" ]]; then
+                    echo "ref=devel" >> $GITHUB_OUTPUT
+                    echo "display_name=devel" >> $GITHUB_OUTPUT
+                  elif [[ "${{ inputs.pull_request }}" =~ ^[0-9]+$ ]]; then
+                    echo "ref=refs/pull/${{ inputs.pull_request }}/head" >> $GITHUB_OUTPUT
+                    echo "display_name=PR #${{ inputs.pull_request }}" >> $GITHUB_OUTPUT
+                  else
+                    echo "ref=${{ inputs.pull_request }}" >> $GITHUB_OUTPUT
+                    echo "display_name=${{ inputs.pull_request }}" >> $GITHUB_OUTPUT
+                  fi
+
             # Checks-out the repository under $GITHUB_WORKSPACE
             - uses: actions/checkout@v4
               with:
-                  ref: ${{ inputs.pull_request || github.ref }}
+                  ref: ${{ steps.checkout-ref.outputs.ref }}
                   submodules: recursive
                   fetch-depth: 0
                   fetch-tags: true
@@ -29,7 +44,7 @@ jobs:
 
             - name: Show deployment info
               run: |
-                  echo "Branch/PR: ${{ inputs.pull_request || github.ref }}"
+                  echo "Deploying: ${{ steps.checkout-ref.outputs.display_name }}"
                   echo "Current commit:"
                   git log -1 --oneline
 
@@ -94,7 +109,7 @@ jobs:
                   status: ${{ job.status }}
                   token: ${{ secrets.GITHUB_TOKEN }}
                   notification_title: "{workflow} has {status_message}"
-                  message_format: "{emoji} *{workflow}* {status_message} in <{repo_url}|{repo}> - Branch: ${{ inputs.pull_request || github.ref_name }}"
+                  message_format: "{emoji} *{workflow}* {status_message} in <{repo_url}|{repo}> - Deployed: ${{ steps.checkout-ref.outputs.display_name }}"
                   footer: "Linked Repo <{repo_url}|{repo}> | <{workflow_url}|View Workflow>"
               env:
                   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
