--- a/package.json
+++ b/package.json
@@ -174,10 +174,10 @@
         "@types/react-dom": "$@types/react-dom"
     },
     "resolutions": {
-        "**/react": "^19.0.0",
-        "**/react-dom": "^19.0.0",
-        "**/@types/react": "^19.0.6",
-        "**/@types/react-dom": "^19.0.3"
+        "**/react": "19.1.0",
+        "**/react-dom": "19.1.0",
+        "**/@types/react": "19.1.6",
+        "**/@types/react-dom": "19.1.6"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
