--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,103 +1,27 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run.
 on:
-    # Triggers the workflow on push or pull request events but only for the devel branch
     push:
         branches: [devel]
     pull_request:
         branches: [devel]
-
-    # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
-env:
-  PLAYWRIGHT_DOCKER: mcr.microsoft.com/playwright:v1.51.0-noble
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+    lint:
+        uses: ./.github/workflows/lint.yml
+
+    type-check:
+        uses: ./.github/workflows/type-check.yml
+
     build:
-        runs-on: ubuntu-latest
-        timeout-minutes: 10
+        uses: ./.github/workflows/build.yml
 
-        steps:
-            # Checks-out the repository under $GITHUB_WORKSPACE
-            - uses: actions/checkout@v4
-              with:
-                  submodules: recursive
-                  lfs: true
+    prettier:
+        uses: ./.github/workflows/prettier.yml
 
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
+    spell-check:
+        uses: ./.github/workflows/spell-check.yml
 
-            - name: Cache node modules
-              id: cache-node-modules
-              uses: actions/cache@v4
-              with:
-                  path: node_modules
-                  key: ${{ runner.os }}-node-modules
-
-            - name: yarn install
-              uses: nick-fields/retry@v3
-              with:
-                  timeout_minutes: 10
-                  max_attempts: 3
-                  command: yarn install
-
-            - name: Eslint
-              run: yarn lint
-
-
-            - name: Type check
-              run: yarn type-check
-
-            - name: Start frontend server for e2e tests
-              run: yarn vite &
-
-            - name: Check docker image cache presence
-              id: cache-docker-image
-              uses: actions/cache@v4
-              with:
-                path: /tmp/playwright-image.tar
-                key: docker-playwright-${{ hashFiles('.github/workflows/your-workflow.yml') }}
-
-            - name: Pull Playwright image if its not cached
-              if: steps.cache-docker-image.outputs.cache-hit != 'true'
-              run: docker pull ${{ env.PLAYWRIGHT_DOCKER }}
-
-            - name: Save Docker image in cache
-              if: steps.cache-docker-image.outputs.cache-hit != 'true'
-              run: docker save ${{ env.PLAYWRIGHT_DOCKER }} > /tmp/playwright-image.tar
-
-            - name: Load Docker image
-              if: steps.cache-docker-image.outputs.cache-hit == 'true'
-              run: docker load < /tmp/playwright-image.tar
-
-            - name: Check server ready, wait if needed
-              run: curl -s --retry 30 --retry-delay 1 --retry-all-errors http://localhost:8080 > /dev/null
-
-            - name: Tests
-              run: yarn test:ci
-
-            - name: Upload e2e test failure results (if any)
-              if: always() 
-              uses: actions/upload-artifact@v4
-              with:
-                name: test-results
-                path: test-results/
-                retention-days: 7
-                if-no-files-found: ignore
-
-            - name: Test the Build
-              run: yarn build-ci
-
-            - name: Prettier check
-              run: yarn prettier:check
-
-            - name: Spell check
-              uses: streetsidesoftware/cspell-action@v6
-              with:
-                  files: src/**/*.{ts,tsx}
+    test:
+        uses: ./.github/workflows/test.yml
