Eliminate redundant job name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ env:
     PLAYWRIGHT_DOCKER: mcr.microsoft.com/playwright:v1.51.0-noble
 
 jobs:
-    test:
+    run:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
