--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,18 @@
 name: Test
+run-name: Test
 
 on:
+    push:
+        branches: [devel]
+    pull_request:
+        branches: [devel]
     workflow_dispatch:
-    workflow_call:
 
 env:
     PLAYWRIGHT_DOCKER: mcr.microsoft.com/playwright:v1.51.0-noble
 
 jobs:
-    run:
+    test:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
