--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,15 @@
 name: Lint
+run-name: Lint
 
 on:
+    push:
+        branches: [devel]
+    pull_request:
+        branches: [devel]
     workflow_dispatch:
-    workflow_call:
 
 jobs:
-    run:
+    lint:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
