--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -1,11 +1,15 @@
 name: Spell Check
+run-name: Spell Check
 
 on:
+    push:
+        branches: [devel]
+    pull_request:
+        branches: [devel]
     workflow_dispatch:
-    workflow_call:
 
 jobs:
-    run:
+    spell-check:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
