--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -1,11 +1,15 @@
 name: Type Check
+run-name: Type Check
 
 on:
+    push:
+        branches: [devel]
+    pull_request:
+        branches: [devel]
     workflow_dispatch:
-    workflow_call:
 
 jobs:
-    run:
+    type-check:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
