--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: Build
-run-name: Build
 
 on:
     push:
@@ -9,7 +8,8 @@ on:
     workflow_dispatch:
 
 jobs:
-    build:
+    run:
+        name: Build
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
