--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -9,7 +9,8 @@ on:
     workflow_dispatch:
 
 jobs:
-    prettier:
+    run:
+        name: Prettier
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
