--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -9,7 +9,8 @@ on:
     workflow_dispatch:
 
 jobs:
-    spell-check:
+    run:
+        name: Spell check
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
