Revert "Naming take 5"
This reverts commit 7f18b0fc4907806c2a46316277dbec4ec6591c4b.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,6 @@
 name: Lint
+run-name: Lint
+
 on:
     push:
         branches: [devel]
@@ -7,8 +9,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    run:
-        name: Lint
+    lint:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
