--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
 name: Test
+run-name: Test
 
 on:
     push:
@@ -11,8 +12,7 @@ env:
     PLAYWRIGHT_DOCKER: mcr.microsoft.com/playwright:v1.51.0-noble
 
 jobs:
-    run:
-        name: Playwright tests
+    test:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
