--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build
+run-name: Build
 
 on:
     push:
@@ -8,8 +9,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    run:
-        name: Build
+    build:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
