--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -1,4 +1,5 @@
 name: Type Check
+run-name: Type Check
 
 on:
     push:
@@ -8,8 +9,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    run:
-        name: Type check
+    type-check:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
