Put linting stuff together

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
 name: Test
-run-name: Test
 
 on:
     push:
@@ -12,7 +11,7 @@ env:
     PLAYWRIGHT_DOCKER: mcr.microsoft.com/playwright:v1.51.0-noble
 
 jobs:
-    test:
+    playwright:
         runs-on: ubuntu-latest
         timeout-minutes: 10
 
