--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,41 @@ on:
     workflow_dispatch:
 
 jobs:
-    lint:
+    prettier:
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  submodules: recursive
+                  lfs: true
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "20"
+
+            - name: Cache node modules
+              id: cache-node-modules
+              uses: actions/cache@v4
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-modules-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-modules-
+
+            - name: yarn install
+              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              uses: nick-fields/retry@v3
+              with:
+                  timeout_minutes: 10
+                  max_attempts: 3
+                  command: yarn install
+
+            - name: Run Prettier check
+              run: yarn prettier:check
+
+    eslint:
         runs-on: ubuntu-latest
         timeout-minutes: 5
 
@@ -42,3 +76,52 @@ jobs:
 
             - name: Run ESLint
               run: yarn lint
+
+    type-check:
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  submodules: recursive
+                  lfs: true
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "20"
+
+            - name: Cache node modules
+              id: cache-node-modules
+              uses: actions/cache@v4
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-modules-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-modules-
+
+            - name: yarn install
+              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              uses: nick-fields/retry@v3
+              with:
+                  timeout_minutes: 10
+                  max_attempts: 3
+                  command: yarn install
+
+            - name: Run type check
+              run: yarn type-check
+
+    spell-check:
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  submodules: recursive
+                  lfs: true
+
+            - name: Run spell check
+              uses: streetsidesoftware/cspell-action@v6
+              with:
+                  files: src/**/*.{ts,tsx}
