--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@types/platform": "^1.3.4",
         "@types/postcss-import": "^14.0.3",
         "@types/postcss-inline-svg": "^5.0.4",
+        "@types/qrcode": "^1.5.5",
         "@types/query-string": "^5.0.1",
         "@types/react": "=19.1.6",
         "@types/react-autosuggest": "^10.1.11",
@@ -140,6 +141,7 @@
         "performance-now": "^2.1.0",
         "platform": "^1.3.6",
         "prop-types": "^15.5.0",
+        "qrcode": "^1.5.4",
         "query-string": "^5.0.1",
         "react": "=19.1.0",
         "react-autosuggest": "^10.1.0",
