--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,9 @@ coverage
 /blob-report/
 /playwright/
 /e2e-tests/playwright/
-.incident_indicator.lock
+.incident-indicator.lock
 submodules/moderator-ui
+
 old-*
 i18n/*.tar.gz
 *.old
