--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ src/components/base
 todo
 yarn-error.log
 deployment-staging-area
+.deployment-refs
 Makefile.passwords
 how_to_add_a_new_language.txt
 .DS_Store
