Upgrade packages. Fix type errors.
major upgrades:
- vite 6.3 -> 7.1
- sentry 7.92 -> 10.22
- nivo 0.88 -> 0.99.0
- redux 3.7 -> 5.0
- jest 29.7 -> 30.2
- openai 4.57 -> 6.70

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
         "outDir": "./dist/",
         "target": "es2015",
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "isolatedModules": true,
         "esModuleInterop": true,
         "removeComments": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es2015", "dom"],
+        "lib": ["es2022", "dom"],
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
