--- a/package.json
+++ b/package.json
@@ -40,126 +40,124 @@
         "defaults"
     ],
     "devDependencies": {
-        "@eslint/compat": "^1.2.4",
-        "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "=9.14.0",
-        "@google-cloud/translate": "^7.0.3",
-        "@playwright/test": "^1.51.0",
-        "@stylistic/eslint-plugin": "^2.12.0",
-        "@testing-library/dom": "^10.0.4",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^16.1.0",
+        "@eslint/compat": "^1.4.0",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "9.38.0",
+        "@google-cloud/translate": "^9.2.1",
+        "@playwright/test": "^1.56.1",
+        "@stylistic/eslint-plugin": "^5.5.0",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
-        "@tony.ganchev/eslint-plugin-header": "^3.1.2",
+        "@tony.ganchev/eslint-plugin-header": "^3.1.8",
         "@types/d3": "^7.4.0",
         "@types/howler": "^2.2.12",
-        "@types/jest": "^29.5.0",
-        "@types/markdown-it": "^0.0.4",
-        "@types/moment-duration-format": "^2.2.2",
-        "@types/node": "^22.13.10",
+        "@types/jest": "^30.0.0",
+        "@types/markdown-it": "^14.1.2",
+        "@types/moment-duration-format": "^2.2.7",
+        "@types/node": "^24.9.1",
         "@types/platform": "^1.3.4",
         "@types/postcss-import": "^14.0.3",
         "@types/postcss-inline-svg": "^5.0.4",
-        "@types/qrcode": "^1.5.5",
-        "@types/query-string": "^5.0.1",
-        "@types/react": "=19.1.6",
+        "@types/qrcode": "^1.5.6",
+        "@types/react": "19.2.2",
         "@types/react-autosuggest": "^10.1.11",
-        "@types/react-dom": "=19.1.6",
+        "@types/react-dom": "19.2.2",
         "@types/react-linkify": "^1.0.4",
-        "@types/react-virtualized": "^9.22.0",
-        "@types/sanitize-html": "^2.13.0",
-        "@types/testing-library__jest-dom": "^5.14.5",
+        "@types/react-virtualized": "^9.22.3",
+        "@types/sanitize-html": "^2.16.0",
         "@types/valid-url": "^1.0.7",
-        "@typescript-eslint/eslint-plugin": "^8.18.0",
-        "@typescript-eslint/parser": "^8.18.0",
-        "@vitejs/plugin-basic-ssl": "^1.2.0",
-        "@vitejs/plugin-react": "^4.3.4",
-        "autoprefixer": "^10.4.20",
-        "body-parser": "1.20.3",
-        "cspell": "^8.3.2",
-        "cssnano": "^7.0.6",
-        "deepl-node": "^1.10.1",
-        "dependency-cruiser": "^16.8.0",
-        "esbuild-plugin-react-virtualized": "^1.0.4",
-        "eslint": "=9.14.0",
-        "eslint-config-prettier": "=9.1.2",
-        "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-jsdoc": "^50.6.0",
+        "@typescript-eslint/eslint-plugin": "^8.46.2",
+        "@typescript-eslint/parser": "^8.46.2",
+        "@vitejs/plugin-basic-ssl": "^2.1.0",
+        "@vitejs/plugin-react": "^5.1.0",
+        "autoprefixer": "^10.4.21",
+        "body-parser": "2.2.0",
+        "cspell": "^9.2.2",
+        "cssnano": "^7.1.1",
+        "deepl-node": "^1.20.0",
+        "dependency-cruiser": "^17.1.0",
+        "esbuild-plugin-react-virtualized": "^1.0.5",
+        "eslint": "9.38.0",
+        "eslint-config-prettier": "10.1.8",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jsdoc": "^61.1.9",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-prettier": ">=5.2.1",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "eslint-plugin-unicorn": "^49.0.0",
-        "globals": "^15.8.0",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-unicorn": "^62.0.0",
+        "globals": "^16.4.0",
         "html-minifier": "4.0.0",
-        "husky": "^8.0.1",
-        "jest": "^29.7.0",
+        "husky": "^9.1.7",
+        "jest": "^30.2.0",
         "jest-chain": "^1.1.6",
-        "jest-environment-jsdom": "^29.7.0",
+        "jest-environment-jsdom": "^30.2.0",
         "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^15.2.2",
-        "openai": "^4.57.3",
+        "lint-staged": "^16.2.6",
+        "openai": "^6.7.0",
         "pofile": "^1.1.0",
-        "postcss": "^8.4.49",
-        "postcss-import": "^16.1.0",
+        "postcss": "^8.5.6",
+        "postcss-import": "^16.1.1",
         "postcss-inline-svg": "^6.0.0",
-        "prettier": "3.1.1",
-        "prettier-eslint": "^16.3.0",
+        "prettier": "3.6.2",
+        "prettier-eslint": "^16.4.2",
         "stylus": "0.64.0",
         "stylus-supremacy": "4.0.0",
         "supervisor": "^0.12.0",
-        "terser": "^5.37.0",
-        "ts-jest": "^29.2.5",
-        "typescript": "=5.7.3",
-        "vite": "^6.3.6",
+        "terser": "^5.44.0",
+        "ts-jest": "^29.4.5",
+        "typescript": "5.9.3",
+        "vite": "npm:rolldown-vite@7.1.19",
         "vite-bundle-visualizer": "^1.2.1",
-        "vite-plugin-checker": "^0.8.0",
-        "vite-plugin-node-polyfills": "^0.22.0",
+        "vite-plugin-checker": "^0.11.0",
+        "vite-plugin-node-polyfills": "^0.24.0",
         "xgettext-js": "^3.0.0",
         "yarn": "^1.22.22"
     },
     "dependencies": {
-        "@dnd-kit/core": "^6.0.3",
-        "@dnd-kit/sortable": "^7.0.0",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
         "@hapi/joi": "^17.1.1",
-        "@nivo/core": "^0.88.0",
-        "@nivo/line": "^0.88.0",
-        "@nivo/pie": "^0.88.0",
-        "@sentry/browser": "^7.92.0",
-        "array-move": "^2.2.1",
+        "@nivo/core": "^0.99.0",
+        "@nivo/line": "^0.99.0",
+        "@nivo/pie": "^0.99.0",
+        "@sentry/browser": "^10.22.0",
+        "array-move": "^4.0.0",
         "classnames": "^2.5.1",
         "d3": "^7.6.1",
-        "date-fns": "^3.6.0",
+        "date-fns": "^4.1.0",
         "eventemitter3": "^5.0.0",
         "howler": "^2.2.4",
         "js-noise": "^0.1.3",
         "jsonwebtoken": "=9.0.2",
-        "markdown-it": "^12.3.2",
+        "markdown-it": "^14.1.0",
         "moment": "^2.29.4",
         "moment-duration-format": "^2.3.2",
-        "moment-timezone": "^0.5.35",
+        "moment-timezone": "^0.6.0",
         "performance-now": "^2.1.0",
         "platform": "^1.3.6",
         "prop-types": "^15.5.0",
         "qrcode": "^1.5.4",
-        "query-string": "^5.0.1",
-        "react": "=19.1.0",
+        "query-string": "^9.3.1",
+        "react": "19.2.0",
         "react-autosuggest": "^10.1.0",
         "react-datetime": "^3.3.1",
-        "react-dom": "=19.1.0",
-        "react-dropzone": "^12.0.5",
+        "react-dom": "19.2.0",
+        "react-dropzone": "^14.3.8",
         "react-linkify": "^1.0.0-alpha",
-        "react-router-dom": "=7.6.2",
-        "react-select": "^5.9.0",
+        "react-router-dom": "7.9.4",
+        "react-select": "^5.10.2",
         "react-split": "^2.0.9",
         "react-switch": "7.1.0",
-        "react-table": "^6.10.0",
-        "react-tabs": "^6.0.2",
-        "react-virtualized": "^9.22.5",
-        "redux": "^3.7.2",
-        "sanitize-html": "^2.14.0",
-        "sweetalert2": "11.22.4",
-        "ts-md5": "^1.3.1",
+        "react-table": "^6.11.5",
+        "react-tabs": "^6.1.0",
+        "react-virtualized": "^9.22.6",
+        "redux": "^5.0.1",
+        "sanitize-html": "^2.17.0",
+        "sweetalert2": "11.26.3",
+        "ts-md5": "^2.0.1",
         "valid-url": "^1.0.9",
         "whatwg-fetch": "^3.0.0"
     },
@@ -170,17 +168,18 @@
         ]
     },
     "overrides": {
-        "react": "=19.1.0",
-        "react-dom": "=19.1.0",
-        "react-router-dom": "=7.6.2",
-        "@types/react": "=19.1.6",
-        "@types/react-dom": "=19.1.6"
+        "react": "=19.2.0",
+        "react-dom": "=19.2.0",
+        "react-router-dom": "=7.9.4",
+        "@types/react": "=19.2.2",
+        "@types/react-dom": "=19.2.2"
     },
     "resolutions": {
-        "**/react": "19.1.0",
-        "**/react-dom": "19.1.0",
-        "**/@types/react": "19.1.6",
-        "**/@types/react-dom": "19.1.6"
+        "**/react": "19.2.0",
+        "**/react-dom": "19.2.0",
+        "**/@types/react": "19.2.2",
+        "**/@types/react-dom": "19.2.2",
+        "**/vite": "npm:rolldown-vite@7.1.19"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
