Upgrade JosekiAdmin from react-table v6 to TanStack Table v8
- Rewrite JosekiAdmin component from class to functional component
- Maintain all existing functionality: pagination, filtering, row selection, reversion
- Fixes Rolldown CommonJS interop issues with react-table v6

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
         "@nivo/line": "^0.99.0",
         "@nivo/pie": "^0.99.0",
         "@sentry/browser": "^10.22.0",
+        "@tanstack/react-table": "^8.21.3",
         "array-move": "^4.0.0",
         "classnames": "^2.5.1",
         "d3": "^7.6.1",
@@ -151,7 +152,6 @@
         "react-select": "^5.10.2",
         "react-split": "^2.0.9",
         "react-switch": "7.1.0",
-        "react-table": "^6.11.5",
         "react-tabs": "^6.1.0",
         "react-virtualized": "^9.22.6",
         "redux": "^5.0.1",
