--- a/package.json
+++ b/package.json
@@ -136,7 +136,6 @@
         "moment": "^2.29.4",
         "moment-duration-format": "^2.3.2",
         "moment-timezone": "^0.6.0",
-        "performance-now": "^2.1.0",
         "platform": "^1.3.6",
         "prop-types": "^15.5.0",
         "qrcode": "^1.5.4",
@@ -156,8 +155,7 @@
         "sanitize-html": "^2.17.0",
         "sweetalert2": "11.26.3",
         "ts-md5": "^2.0.1",
-        "valid-url": "^1.0.9",
-        "whatwg-fetch": "^3.0.0"
+        "valid-url": "^1.0.9"
     },
     "lint-staged": {
         "src/**/*.{ts,tsx}": [
