only run e2e trigger in online-go.com fork

--- a/.github/workflows/trigger-e2e.yml
+++ b/.github/workflows/trigger-e2e.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   trigger:
     runs-on: ubuntu-latest
+    # Only run on the original repo, not forks
+    if: github.repository == 'online-go/online-go.com'
 
     steps:
       - name: Trigger E2E tests in ogs repo
