--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "removeComments": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es2020", "dom"],
+        "lib": ["es2020", "es2022.array", "dom"],
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
