--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
         "@hapi/joi": "^17.1.1",
+        "@monaco-editor/react": "^4.7.0",
         "@nivo/core": "^0.99.0",
         "@nivo/line": "^0.99.0",
         "@nivo/pie": "^0.99.0",
@@ -136,6 +137,8 @@
         "moment": "^2.29.4",
         "moment-duration-format": "^2.3.2",
         "moment-timezone": "^0.6.0",
+        "monaco-editor": "^0.55.0",
+        "monaco-vim": "^0.4.4",
         "platform": "^1.3.6",
         "prop-types": "^15.5.0",
         "qrcode": "^1.5.4",
@@ -163,18 +166,11 @@
             "cspell"
         ]
     },
-    "overrides": {
-        "react": "=19.2.0",
-        "react-dom": "=19.2.0",
-        "react-router-dom": "=7.9.4",
-        "@types/react": "=19.2.2",
-        "@types/react-dom": "=19.2.2"
-    },
     "resolutions": {
         "**/react": "19.2.0",
         "**/react-dom": "19.2.0",
-        "**/@types/react": "19.2.2",
-        "**/@types/react-dom": "19.2.2",
+        "**/@types/react": "19.2.6",
+        "**/@types/react-dom": "19.2.3",
         "**/vite": "^7.1.12"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
