--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,6 @@
 	"recommendations": [
 		"esbenp.prettier-vscode",
 		"dbaeumer.vscode-eslint",
-		"sysoev.language-stylus",
-		"streetsidesoftware.code-spell-checker",
-		"thisismanta.stylus-supremacy"
-	],
+		"streetsidesoftware.code-spell-checker"
+	]
 }
