--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "postcss-inline-svg": "^6.0.0",
         "postcss-mixins": "^12.1.2",
         "postcss-nested": "^6.0.1",
+        "postcss-simple-vars": "^7.0.1",
         "postcss-url": "^10.1.3",
         "prettier": "3.6.2",
         "prettier-eslint": "^16.4.2",
